added propertyname to building and visits to surveyor
