# src/main/kotlin/fi/metatavu/rapurc/api/impl/buildings/BuildingController.kt
@@ -61,6 +61,7 @@ class BuildingController {
             supportStructure = building.supportingStructure,
             facadeMaterial = building.facadeMaterial,
             roofType = building.roofType,
+            propertyName = building.propertyName,
             streetAddress = building.address?.streetAddress,
             city = building.address?.city,
             postCode = building.address?.postCode,
@@ -120,6 +121,7 @@ class BuildingController {
         buildingDAO.updateSupportStructure(result, building.supportingStructure, userId)
         buildingDAO.updateFacadeMateria(result, building.facadeMaterial, userId)
         buildingDAO.updateRoofType(result, building.roofType, userId)
+        buildingDAO.updatePropertyName(result, building.propertyName, userId)
         buildingDAO.updateStreetAddress(result, building.address?.streetAddress, userId)
         buildingDAO.updateCity(result, building.address?.city, userId)
         buildingDAO.updatePostCode(result, building.address?.postCode, userId)
