# src/main/kotlin/fi/metatavu/rapurc/api/persistence/model/Surveyor.kt
@@ -38,4 +38,6 @@ class Surveyor: Metadata() {
     @Column
     var reportDate: LocalDate? = null
 
+    @Column
+    var visits: String? = null
 }
